04_Teste/exercicios_gerados/question_mcg_10_erro_classe/version_2/full_program_output.txt
Traceback (most recent call last):
  File "<string>", line 1
    classe Animal:
           ^
SyntaxError: invalid syntax